--- a/Outlier-Outbound_Compaction-Environmental.ipynb
+++ b/Outlier-Outbound_Compaction-Environmental.ipynb
@@ -52,10 +52,10 @@
     "%matplotlib inline\n",
     "\n",
     "\n",
-    "server = 'Yrkmill-trux01'\n",
-    "database = 'TRUX_MT_COMP'\n",
-    "username = 'dwuser'\n",
-    "password = 'TruxRe@d0nly!'\n",
+    "server = 'Yourserver'\n",
+    "database = 'yourdatabase'\n",
+    "username = 'youruser'\n",
+    "password = 'yourpassword'\n",
     "\n",
     "\n",
     "conn_str = f'DRIVER={{SQL Server}};SERVER={server};DATABASE={database};UID={username};PWD={password}'\n",
